box/kubernetes/policies/manifests/kyverno/add-dnsconfig-ndots.yml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-dnsconfig-ndots
  annotations:
    policies.kyverno.io/title: Add dnsConfig ndots
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      The ndots value controls where DNS lookups are first performed in a cluster
      and needs to be set to a lower value than the default of 5 in some cases.
      This policy mutates all Pods to add the ndots option with a value of 2.
    kyverno.younsl.xyz/battle-tested: "true"
    kyverno.younsl.xyz/battle-tested-since: "2025-03-16T00:00:00+09:00"
    kyverno.younsl.xyz/reference: https://kyverno.io/policies/other/add-ndots/add-ndots/
spec:
  rules:
  - name: add-dnsconfig-ndots
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          dnsConfig:
            options:
              - name: ndots
                value: "2"
